--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en" data-ng-app="ark_explorer" data-ng-csp>
 <head>
   <base href="/">
-  <title data-ng-bind="'ARK • Blockchain Explorer • ' + $root.title + $root.titleDetail">ARK • Blockchain Explorer</title>
+  <title data-ng-bind="'BPL• Blockchain Explorer • ' + $root.title + $root.titleDetail">BPL • Blockchain Explorer</title>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="fragment" content="!">
-  <meta name="keywords" content="ark, lisk, shift, blocks, altcoin, bitcoin, cryptocurrency">
-  <meta name="description" content="ARK Blockchain Explorer">
-  <meta name="application-name" content="ARK Blockchain Explorer"/>
+  <meta name="keywords" content="bpl, lisk, shift, blocks, altcoin, bitcoin, cryptocurrency">
+  <meta name="description" content="BPL Blockchain Explorer">
+  <meta name="application-name" content="BPL Blockchain Explorer"/>
   <meta name="msapplication-TileColor" content="#F3F3E1" />
   <meta name="msapplication-TileImage" content="/img/mstile-144x144.png" />
   <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png" />
@@ -25,11 +25,11 @@
   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/img/apple-touch-icon-120x120.png" />
   <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/img/apple-touch-icon-76x76.png" />
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/img/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="/img/favicon-128.png" sizes="128x128" />
+  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="128x128" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,400italic">
   <link rel="stylesheet" href="/css/main.min.css">
@@ -38,22 +38,20 @@
   <div id="wrap">
     <div class="navbar navbar-default navbar-fixed-top" data-ng-include="'/views/index/header.html'" role='navigation'></div>
     <section class="container" data-ng-view></section>
-  </div>
   <div id="footer" role="navigation">
     <div class="container" data-ng-controller="FooterController">
       <div class="row">
         <div class="col-left col-xs-6">
-          <a href="https://ark.io" target="_blank" title="Official ARK Website">Website</a>
-          <a href="https://forum.ark.io" target="_blank" title="Official ARK Forum">Forum</a>
-          <a href="https://bitcointalk.org/index.php?topic=1649695.0" target="_blank" title="Bitcoin Talk Thread">BTT Thread</a>
+          <a href="https://blockpool.io" target="_blank" title="Official BPL Website">Website</a>
+          <a href="https://bitcointalk.org/index.php?topic=1878498.msg18982597" target="_blank" title="Bitcoin Talk Thread">BPL Thread</a>
         </div>
         <div class="col-right col-xs-6">
-          <a href="https://www.facebook.com/arkecosystem" target="_blank" title="Facebook"><i class="fa fa-2x fa-facebook"></i></a>
-          <a href="https://www.reddit.com/r/arkecosystem" target="_blank" title="Reddit"><i class="fa fa-reddit-square fa-2x"></i></a>
-          <a href="https://twitter.com/arkecosystem" target="_blank" title="Twitter"><i class="fa fa-twitter fa-2x"></i></a>
-          <a href="https://ark.io/join-ark-slack" data-original-title="Slack"><i class="fa fa-2x fa-slack"></i></a>
-          <a href="https://www.youtube.com/channel/UCpc2k6zOOutGT9y56urDClg" data-original-title="youtube"><i class="fa fa-2x fa-youtube-play"></i></a>
-          <a href="https://www.github.com/ArkEcosystem" target="_blank" title="Github"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.facebook.com/blockpool.io" target="_blank" title="Facebook"><i class="fa fa-2x fa-facebook"></i></a>
+          <a href="https://www.medium.com/blockpool" target="_blank" title="Medium"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>
+          <a href="https://twitter.com/blockpool.io" target="_blank" title="Twitter"><i class="fa fa-twitter fa-2x"></i></a>
+          <a href="https://slack.blockpool.io/ data-original-title="Slack"><i class="fa fa-2x fa-slack"></i></a>
+          <a href="https://www.youtube.com/watch?v=_0x2kvogxIo" data-original-title="youtube"><i class="fa fa-2x fa-youtube-play"></i></a>
+          <a href="https://www.github.com/Blockpool-io" target="_blank" title="Github"><i class="fa fa-github fa-2x"></i></a>
         </div>
       </div>
     </div>
