--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-ng-app="ark_explorer" data-ng-csp>
+<html lang="en" data-ng-app="bpl_explorer" data-ng-csp>
 <head>
   <base href="/">
   <title data-ng-bind="'BPL• Blockchain Explorer • ' + $root.title + $root.titleDetail">BPL • Blockchain Explorer</title>
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="col-left col-xs-6">
           <a href="https://blockpool.io" target="_blank" title="Official BPL Website">Website</a>
-          <a href="https://bitcointalk.org/index.php?topic=1878498.msg18982597" target="_blank" title="Bitcoin Talk Thread">BPL Thread</a>
+          <a href="https://bitcointalk.org/index.php?topic=1878498.msg18982597" target="_blank" title="Blockpool Talk Thread">BPL Thread</a>
         </div>
         <div class="col-right col-xs-6">
           <a href="https://www.facebook.com/blockpool.io" target="_blank" title="Facebook"><i class="fa fa-2x fa-facebook"></i></a>
