--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-ng-app="bpl_explorer" data-ng-csp>
 <head>
   <base href="/">
-  <title data-ng-bind="'BPL• Blockchain Explorer • ' + $root.title + $root.titleDetail">BPL • Blockchain Explorer</title>
+  <title data-ng-bind="'BPL• Blockchain Explorer • ' + $root.title + $root.titleDetail">WBX • Blockchain Explorer</title>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
