--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en" data-ng-app="bpl_explorer" data-ng-csp>
 <head>
   <base href="/">
-  <title data-ng-bind="'BPL• Blockchain Explorer • ' + $root.title + $root.titleDetail">WBX • Blockchain Explorer</title>
+  <title data-ng-bind="'WBX Blockchain Explorer • ' + $root.title + $root.titleDetail">WBX • Blockchain Explorer</title>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="fragment" content="!">
   <meta name="keywords" content="bpl, lisk, shift, blocks, altcoin, bitcoin, cryptocurrency">
-  <meta name="description" content="BPL Blockchain Explorer">
-  <meta name="application-name" content="BPL Blockchain Explorer"/>
+  <meta name="description" content="WBX Blockchain Explorer">
+  <meta name="application-name" content="WBX Blockchain Explorer"/>
   <meta name="msapplication-TileColor" content="#F3F3E1" />
   <meta name="msapplication-TileImage" content="/img/mstile-144x144.png" />
   <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png" />
@@ -42,8 +42,8 @@
     <div class="container" data-ng-controller="FooterController">
       <div class="row">
         <div class="col-left col-xs-6">
-          <a href="https://blockpool.io" target="_blank" title="Official BPL Website">Website</a>
-          <a href="https://bitcointalk.org/index.php?topic=1878498.msg18982597" target="_blank" title="Blockpool Talk Thread">BPL Thread</a>
+          <a href="https://blockpool.io" target="_blank" title="Official Woooba Website">Website</a>
+          <a href="https://bitcointalk.org/index.php?topic=1878498.msg18982597" target="_blank" title="Blockpool Talk Thread">WBX Thread</a>
         </div>
         <div class="col-right col-xs-6">
           <a href="https://www.facebook.com/blockpool.io" target="_blank" title="Facebook"><i class="fa fa-2x fa-facebook"></i></a>
