fixing the timestamp and adding the social media links

--- a/public/index.html
+++ b/public/index.html
@@ -42,16 +42,14 @@
     <div class="container" data-ng-controller="FooterController">
       <div class="row">
         <div class="col-left col-xs-6">
-          <a href="https://blockpool.io" target="_blank" title="Official Woooba Website">Website</a>
-          <a href="https://bitcointalk.org/index.php?topic=1878498.msg18982597" target="_blank" title="Blockpool Talk Thread">WBX Thread</a>
+          <a href="https://www.woooba.com/" target="_blank" title="Official Woooba Website">Website</a>
+          <a href="https://bitcointalk.org/index.php?topic=1866437.1000" target="_blank" title="Woooba Talk Thread">WBX Thread</a>
         </div>
         <div class="col-right col-xs-6">
-          <a href="https://www.facebook.com/blockpool.io" target="_blank" title="Facebook"><i class="fa fa-2x fa-facebook"></i></a>
-          <a href="https://www.medium.com/blockpool" target="_blank" title="Medium"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>
-          <a href="https://twitter.com/blockpool.io" target="_blank" title="Twitter"><i class="fa fa-twitter fa-2x"></i></a>
-          <a href="https://slack.blockpool.io/ data-original-title="Slack"><i class="fa fa-2x fa-slack"></i></a>
-          <a href="https://www.youtube.com/watch?v=_0x2kvogxIo" data-original-title="youtube"><i class="fa fa-2x fa-youtube-play"></i></a>
-          <a href="https://www.github.com/Blockpool-io" target="_blank" title="Github"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.facebook.com/WOOOBALtd" target="_blank" title="Facebook"><i class="fa fa-2x fa-facebook"></i></a>
+          <a href="http://instagram.com/woooba/" target="_blank" title="Medium"><i class="fa fa-instagram fa-2x"></i>
+          <a href="https://twitter.com/woooba/" target="_blank" title="Twitter"><i class="fa fa-twitter fa-2x"></i></a>
+          <a href="http://www.pinterest.com/Woooba/" target="_blank" title="Pintrest"><i class="fa fa-pinterest fa-2x"></i></a>
         </div>
       </div>
     </div>
