--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/img/apple-touch-icon-120x120.png" />
   <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/img/apple-touch-icon-76x76.png" />
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/img/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="/img/BPL_favicon.png" sizes="128x128" />
+  <link rel="icon" type="image/ico" href="/img/BPL_favicon.ico" sizes="196x196" />
+  <link rel="icon" type="image/ico" href="/img/BPL_favicon.ico" sizes="96x96" />
+  <link rel="icon" type="image/ico" href="/img/BPL_favicon.ico" sizes="32x32" />
+  <link rel="icon" type="image/ico" href="/img/BPL_favicon.ico" sizes="16x16" />
+  <link rel="icon" type="image/ico" href="/img/BPL_favicon.ico" sizes="128x128" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,400italic">
   <link rel="stylesheet" href="/css/main.min.css">
