making changes for the delegate monitor

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="fragment" content="!">
-  <meta name="keywords" content="bpl, lisk, shift, blocks, altcoin, bitcoin, cryptocurrency">
+  <meta name="keywords" content="wbx, lisk, shift, blocks, altcoin, bitcoin, cryptocurrency">
   <meta name="description" content="WBX Blockchain Explorer">
   <meta name="application-name" content="WBX Blockchain Explorer"/>
   <meta name="msapplication-TileColor" content="#F3F3E1" />
