removing BPL dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-ng-app="bpl_explorer" data-ng-csp>
+<html lang="en" data-ng-app="explorer" data-ng-csp>
 <head>
   <base href="/">
   <title data-ng-bind="'WBX Blockchain Explorer • ' + $root.title + $root.titleDetail">WBX • Blockchain Explorer</title>
